--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <span class="close-btn"></span>
                 </div>
                 <!-- arrows -->
-                <button class="arrow-btn left-arrow"><img src="img/arrow.png" alt=""></button>
-                <button class="arrow-btn right-arrow"><img src="img/arrow.png" alt=""></button>
+                <button class="arrow-btn left-arrow"><img src="arrow.png" alt=""></button>
+                <button class="arrow-btn right-arrow"><img src="arrow.png" alt=""></button>
                 <!-- image -->
                 <img src="certificate 1.png" class="large-image" alt="certificate 1">
                 <!-- image-index -->
