--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body dir ="ltr">
     <h2>Personal information</h2> <!--عنوان رئيسي-->
    <h2>
-    <img src="WhatsApp Image 2024-07-25 at 2.46.43 PM.jpeg" height="150" width="150"
+    <img src="11.jpeg" height="150" width="150">
    
    </h2>
     <p> <!--وصف-->
