--- a/index.html
+++ b/index.html
@@ -7,78 +7,58 @@
 
 <body dir="rtl">
     <div style="text-align: center; margin-top: 20px;">
-        <h2>معلومات شخصية</h2>
+        <h2>Personal Information</h2>
         <img src="11.jpeg" height="150" width="150">
         <p>
-            <b>الاسم: </b>Youssaf Ahmed Abd Elbaset
-            <br><b>العمر: </b>20
-            <br><b>السنة الدراسية: </b>السنة الثالثة
-            <br><b>وقت العمل: </b>من الساعة 12:00 ظهرًا إلى الساعة 6:00 مساءً
-            <br><b>القسم: </b><i>الكيمياء والفيزياء</i>
-            <br><b>البريد الإلكتروني: </b><a href="mailto:youssafa326@gmail.com">youssafa326@gmail.com</a>
+            <b>Name: </b>Youssaf Ahmed Abd Elbaset
+            <br><b>Age: </b>20
+            <br><b>Year of Study: </b>Third Year
+            <br><b>Work Hours: </b>From 12:00 PM to 6:00 PM
+            <br><b>Department: </b><i>Chemistry and Physics</i>
+            <br><b>Email: </b><a href="mailto:youssafa326@gmail.com">youssafa326@gmail.com</a>
             <hr>
         </p>
 
-        <h2>التجارب</h2>
+        <h2>Experiences</h2>
         <img src="certificate.png" height="500" width="500">
         <img src="certificate 2.png" height="500" width="500">
 
         <ol type="A">
-            <li>حاصل على شهادة في دورة التحاليل الطبية</li>
-            <li>حاصل على شهادة في دورة Python</li>
-            <li>حاصل على شهادة في دورة HTML</li>
-            <li>حاصل على شهادة في دورة CSS</li>
+            <li>Certificate in Medical Analysis Course</li>
+            <li>Certificate in Python Course</li>
+            <li>Certificate in HTML Course</li>
+            <li>Certificate in CSS Course</li>
         </ol>
         <hr>
 
-        <h2>الأهداف</h2>
+        <h2>Goals</h2>
         <ul>
-            <h4>العمل الرئيسي</h4>
-            <li>العمل في مجال التحاليل (اخصائي تحاليل طبية)</li>
-            <li>العمل في مجال طبي (مراقب جودة)</li>
-            <li>العمل في مجال الأدوية (تصنيع الأدوية)</li>
-            <h4>العمل الحر</h4>
-            <li>العمل في مجال التكنولوجيا (برمجة المواقع والتطبيقات)</li>
-            <li>كتابة أبحاث ومقالات</li>
+            <h4>Main Work</h4>
+            <li>Work in Analysis (Medical Analysis Specialist)</li>
+            <li>Work in Medical Field (Quality Controller)</li>
+            <li>Work in Pharmaceutical Field (Drug Manufacturing)</li>
+            <h4>Freelance Work</h4>
+            <li>Work in Technology Field (Website and App Development)</li>
+            <li>Writing Research and Articles</li>
         </ul>
-        <hr>
-
-        <form>
-            <label for="phone">رقم التليفون</label>
-            <input type="text" id="phone">
-            <hr>
-            <p>الجنس:</p>
-            <input type="radio" id="male" name="gender">
-            <label for="male">ذكر</label>
-            <input type="radio" id="female" name="gender">
-            <label for="female">أنثى</label>
-            <p>من أي بلد؟</p>
-            <input type="checkbox" id="Egypt" name="Egypt">
-            <label for="Egypt">مصر</label>
-            <input type="checkbox" id="another-country" name="another-country">
-            <label for="another-country">بلد آخر</label>
-
-            <h2>
-                <input type="submit" value="دخول">
-            </h2>
-        </form>
-    </div>
+    
+ </div>
 
     <style>
         body {
-            background-color: rgb(174, 174, 221); /* لون الخلفية الأصلي */
+            background-color: rgb(174, 174, 221); /* Original background color */
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
             padding-top: 20px;
         }
 
         a {
-            color: black; /* لون الروابط أسود */
-            text-decoration: none; /* إزالة تزيين الروابط */
+            color: black; /* Link color black */
+            text-decoration: none; /* Remove link decoration */
         }
 
         a:hover {
-            text-decoration: underline; /* تحت خط عند تمرير الماوس على الرابط */
+            text-decoration: underline; /* Underline on hover */
         }
     </style>
 
